error in compile
Compiled with problems:
×
ERROR in ../src/components/Gamesdetailstable.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\src\components\Gamesdetailstable.js: Support for the experimental syntax 'jsx' isn't currently enabled (16:5):

  14 | const Gamesdetailstable = () => {
  15 |   return (
> 16 |     <TableContainer component={Paper}>
     |     ^
  17 |       <Table>
  18 |         <TableHead>
  19 |           <TableRow>

Add @babel/preset-react (https://github.com/babel/babel/tree/main/packages/babel-preset-react) to the 'presets' section of your Babel config to enable transformation.
If you want to leave it as-is, add @babel/plugin-syntax-jsx (https://github.com/babel/babel/tree/main/packages/babel-plugin-syntax-jsx) to the 'plugins' section to enable parsing.
    at instantiate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:653:32)
    at constructor (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:946:12)
    at Parser.raise (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:3270:19)
    at Parser.expectOnePlugin (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:3316:18)
    at Parser.parseExprAtom (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11222:18)
    at Parser.parseExprSubscripts (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10872:23)
    at Parser.parseUpdate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10855:21)
    at Parser.parseMaybeUnary (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10831:23)
    at Parser.parseMaybeUnaryOrPrivate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10669:61)
    at Parser.parseExprOps (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10674:23)
    at Parser.parseMaybeConditional (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10651:23)
    at Parser.parseMaybeAssign (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10612:21)
    at C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10582:39
    at Parser.allowInAnd (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12257:12)
    at Parser.parseMaybeAssignAllowIn (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10582:17)
    at Parser.parseParenAndDistinguishExpression (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11490:28)
    at Parser.parseExprAtom (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11141:23)
    at Parser.parseExprSubscripts (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10872:23)
    at Parser.parseUpdate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10855:21)
    at Parser.parseMaybeUnary (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10831:23)
    at Parser.parseMaybeUnaryOrPrivate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10669:61)
    at Parser.parseExprOps (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10674:23)
    at Parser.parseMaybeConditional (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10651:23)
    at Parser.parseMaybeAssign (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10612:21)
    at Parser.parseExpressionBase (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10566:23)
    at C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10562:39
    at Parser.allowInAnd (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12252:16)
    at Parser.parseExpression (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10562:17)
    at Parser.parseReturnStatement (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12935:28)
    at Parser.parseStatementContent (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12582:21)
    at Parser.parseStatementLike (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12549:17)
    at Parser.parseStatementListItem (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12529:17)
    at Parser.parseBlockOrModuleBlockBody (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:13121:61)
    at Parser.parseBlockBody (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:13114:10)
    at Parser.parseBlock (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:13102:10)
    at Parser.parseFunctionBody (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11924:24)
    at Parser.parseArrowExpression (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11899:10)
    at Parser.parseParenAndDistinguishExpression (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11502:12)
    at Parser.parseExprAtom (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:11141:23)
    at Parser.parseExprSubscripts (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10872:23)
    at Parser.parseUpdate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10855:21)
    at Parser.parseMaybeUnary (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10831:23)
    at Parser.parseMaybeUnaryOrPrivate (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10669:61)
    at Parser.parseExprOps (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10674:23)
    at Parser.parseMaybeConditional (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10651:23)
    at Parser.parseMaybeAssign (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10612:21)
    at C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10582:39
    at Parser.allowInAnd (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:12252:16)
    at Parser.parseMaybeAssignAllowIn (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:10582:17)
    at Parser.parseVar (C:\Users\nouf.alqasimi\Desktop\videogamesreview-main\videogamesreview-main\node_modules\@babel\parser\lib\index.js:13193:91)
